--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -191,11 +191,11 @@
           <div class="content">
               <p>Using an existing account is quick and easy. Select the account you would like to use and we'll do the rest for you.</p>
               <ul class="unstyled inline">
-                  <li><a href="/auth/github" class="circle-orange-large"><span class="github">github</span></a></li>
-                  <li><a href="/auth/facebook" class="circle-orange-large"><span class="facebook">facebook</span></a></li>
-                  <li><a href="/auth/twitter" class="circle-orange-large"><span class="twitter">twitter</span></a></li>
-                  <li><a href="/auth/google" class="circle-orange-large"><span class="googleplus">google+</span></a></li>
-                  <li><a href="/auth/salesforce" class="circle-orange-large"><span class="salesforce">salesforce</span></a></li>
+                  <li><a href="/auth/github" class="circle-orange"><span class="github">github</span></a></li>
+                  <li><a href="/auth/facebook" class="circle-orange"><span class="facebook">facebook</span></a></li>
+                  <li><a href="/auth/twitter" class="circle-orange"><span class="twitter">twitter</span></a></li>
+                  <li><a href="/auth/google" class="circle-orange"><span class="googleplus">google+</span></a></li>
+                  <li><a href="/auth/salesforce" class="circle-orange"><span class="salesforce">salesforce</span></a></li>
               </ul>
           </div>
 
