--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -97,19 +97,19 @@
         <div class="title"><h1>HAPPENING NOW</h1></div>
         <div class="row-fluid" id="status">
             <div>
-                <span class="icon-active-members"></span><strong>72,475</strong>ACTIVE MEMBERS
+                <span class="icon-active-members"></span><strong><%= number_with_delimiter(@stats['members'], :delimiter => ',') %></strong>ACTIVE MEMBERS
             </div>
             <div>
-                <span class="icon-competing-today"></span><strong>2,580</strong>COMPETING TODAY
+                <span class="icon-competing-today"></span><strong><%= @stats['competing_today'] %></strong>COMPETING TODAY
             </div>
             <div>
-                <span class="icon-available-prize-money"></span><strong>$16,750</strong>AVAILABLE PRIZE MONEY
+                <span class="icon-available-prize-money"></span><strong><%= number_to_currency(@stats['money_up_for_grabs'], :precision => 0) %></strong>AVAILABLE PRIZE MONEY
             </div>
             <div>
-                <span class="active-challenges"></span><strong>21</strong>ACTIVE CHALLENGES
+                <span class="active-challenges"></span><strong><%= @stats['challenges_open'] %></strong>ACTIVE CHALLENGES
             </div>
             <div>
-                <span class="counteries-working"></span><strong>09</strong>COUNTRIES WORKING
+                <span class="counteries-working"></span><strong><%= @stats['countries_working'] %></strong>COUNTRIES WORKING
             </div>
         </div>
 
@@ -118,26 +118,12 @@
         <div class="row-fluid">
             <div class="span6">
                 <div class="title"><h1 class="rss">PRESS</h1></div>
-                <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </a>
-                <p>Ut faucibus rutrum mi, nec blandit felis faucibus et. Nullam venenatis tortor vel ipsum lacinia et bibendum velit hendrerit...</p>
-
-                <a href="#">Donec posuere, arcu non egestas tempor.</a>
-                <p>Ante nisi egestas lorem, vitae sollicitudin nibh ligula et lacus. Aliquam ut odio orci, ut iaculis est rutrum mi, nec blandit...</p>
-
-                <a href="#">Consectetur adipiscing egestas tempor.</a>
-                <p>Ante nisi egestas lorem, vitae sollicitudin nibh ligula et lacus. Aliquam ut odio orci, ut iaculis est rutrum mi, nec blandit. Ut faucibus rutrum nec...</p>
+                <%= render :partial => "shared/feed_items", :locals => { :items => @press_feed_items } %>
             </div>
 
             <div class="span6">
                 <div class="title"><h1 class="rss">POSTS</h1></div>
-                <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </a>
-                <p>Ut faucibus rutrum mi, nec blandit felis faucibus et. Nullam venenatis tortor vel ipsum lacinia et bibendum velit hendrerit...</p>
-
-                <a href="#">Donec posuere, arcu non egestas tempor.</a>
-                <p>Ante nisi egestas lorem, vitae sollicitudin nibh ligula et lacus. Aliquam ut odio orci, ut iaculis est rutrum mi, nec blandit...</p>
-
-                <a href="#">Consectetur adipiscing egestas tempor.</a>
-                <p>Ante nisi egestas lorem, vitae sollicitudin nibh ligula et lacus. Aliquam ut odio orci, ut iaculis est rutrum mi, nec blandit. Ut faucibus rutrum nec...</p>
+                <%= render :partial => "shared/feed_items", :locals => { :items => @post_feed_items } %>
             </div>
         </div>
         <br/>
