account menu and judging

--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -5,7 +5,7 @@
         <div class="banner-unit crowdsouced-banner custumer-res res">
             <img src="/assets/banner/crowdsourced.jpg" alt=""/>
             <div class="buttons">
-                <a class="get-started" href="23_contact_us.html"><span><span>GET STARTED</span></span></a>
+                <a class="get-started" href="/contact"><span><span>GET STARTED</span></span></a>
                 <a class="learn-more" href="/how-it-works-clients">Or Learn More</a>
             </div>
         </div>
