--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,8 @@
     <title>Cloudspokes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-
+    
+    <%= include_gon %>
     <!-- styles -->
     <link href="/assets/base.css" rel="stylesheet">
     <link href="/assets/responsive.css" rel="stylesheet">
