--- a/app/views/accounts/challenges.html.haml
+++ b/app/views/accounts/challenges.html.haml
@@ -27,4 +27,4 @@
 
 
 
-  = render 'shared/account_menu', :selected_item => 'account_details'
+  = render 'shared/account_menu', :selected_item => 'challenges'
