--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <title>Cloudspokes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    
+
     <%= include_gon %>
     <!-- styles -->
     <link href="/assets/base.css" rel="stylesheet">
@@ -32,6 +32,7 @@
                   <form action="/users/sign_in" method="post" class="login-form form-horizontal">
                       <input placeholder="Username" type="text" name="user[username]"/>
                       <input placeholder="Password" type="password" name="user[password]"/>
+                      <input type="hidden" name="user[remember_me]" value="1"/>
                       <div class="btn"><input type="submit" class="btn" value="LOGIN"></div>
                   </form>
               </div>
