implements '/account/invite_friends' page`

--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -4698,3 +4698,7 @@ form.new-comment textarea {
 .dropdown-menu li.active a span.prizes, .dropdown-menu li.active a span.wins {
   color: white;
 }
+
+form.invite-friends .item {
+  margin-bottom: 5px;
+}
