changed to renamed helper

--- a/app/views/accounts/_challenge.html.haml
+++ b/app/views/accounts/_challenge.html.haml
@@ -12,7 +12,7 @@
 
   .tags
     %span Tags:
-    = challenge_tag_links(challenge)
+    = technology_tag_links(challenge)
 
   - if challenge.active?
     - if status == "Watching"
