fixed third party login

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -115,8 +115,7 @@
                   <ul class="links">
                       <li><%= link_to 'Home', main_app.root_path %></li>
                       <li><%= link_to 'What We Do', '/what-we-do' %></li>
-                      <li><%= link_to 'How It Works / Members', '/how-it-works-members' %></li>
-                      <li><%= link_to 'How It Works / Clients', '/how-it-works-clients' %></li>
+                      <li><%= link_to 'How It Works', '/how-it-works' %></li>
                       <li><%= link_to 'About Us', '/about' %></li>
                       <li><%= link_to 'Blog', 'http://blog.cloudspokes.com' %></li>
                       <li><%= link_to 'Privacy & Terms', '/privacy' %></li>
